refactoring some code

--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_EditTimeMission.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_EditTimeMission.cshtml
@@ -159,7 +159,7 @@
         </div>
     </div>
     <div class="modal-footer border-0 mt-3 d-flex gap-3">
-        <a class="btn border-secondary rounded-pill px-4 py-2 text-secondary"
+        <a id="cancelBtn" class="btn border-secondary rounded-pill px-4 py-2 text-secondary"
            data-bs-dismiss="modal">Cancle</a>
         <button type="submit" class="btn border rounded-pill px-4 py-2 orange-btn"
                 style="border-color: #F88634 !important">
