--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/ForgotPassword.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/ForgotPassword.cshtml
@@ -43,7 +43,7 @@
             </form>
             <div class="d-flex flex-column align-items-center bottom-div">
                 <a class="text-center p-2" asp-action="Login" asp-controller="Home">Login</a>
-                <span class="login-span text-light-custom privacy-text position-fixed">
+                <span class="login-span text-light-custom privacy-text position-lg-fixed">
                     Priavcy
                     Policy
                 </span>
