--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/Login.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/Login.cshtml
@@ -45,7 +45,7 @@
                     account
                 </a>
             </span>
-            <span class="login-span text-light-custom privacy-text position-fixed">
+            <span class="login-span text-light-custom privacy-text position-lg-fixed">
                 Priavcy
                 Policy
             </span>
