--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/Registration.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/Registration.cshtml
@@ -62,7 +62,7 @@
                     now
                 </a>
             </span>
-            <span class="login-span text-light-custom privacy-text position-fixed">
+            <span class="login-span text-light-custom privacy-text position-lg-fixed">
                 Priavcy
                 Policy
             </span>
