--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/Index.cshtml
@@ -258,7 +258,7 @@
                     </div>
                     <div class="px-2 info-div">
                         <span>Theme</span>
-                        <p class="fw-bold">@Model.Country.Name</p>
+                        <p class="fw-bold">@Model.Theme.Title</p>
                     </div>
                 </div>
                 <div class="border col d-flex flex-column justify-content-between p-0">
