--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/_RelatedMission.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/_RelatedMission.cshtml
@@ -8,7 +8,7 @@
                  class="card-img-top position-relative" alt="...">
             <div class=" position-absolute country-div-volunteer rounded-pill p-2">
                 <img class="" src="~/images/pin1.png" alt="#">
-                <span>Toronto</span>
+                <span>re</span>
             </div>
             <a href="#" class="position-absolute favourate-volunteer rounded-pill p-1">
                 <img class="" src="~/images/heart.png" alt="#">
