--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_Mission.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_Mission.cshtml
@@ -38,6 +38,7 @@
                             <th>Mission Type</th>
                             <th>Start Date</th>
                             <th>End Date</th>
+                            <th>Status</th>
                             <th>Action</th>
 
 
@@ -60,6 +61,14 @@
                         }
                         <td>@mission.StartDate?.ToString("d")</td>
                             <td>@mission.EndDate?.ToString("d")</td>
+                            @if(mission.IsActive){
+
+                            <td class="text-success">Active</td>
+                            }
+                            else{
+
+                            <td class="text-danger">InActive</td>
+                            }
                             <td class="">
                                 <div class="d-flex gap-3">
                                      @if (mission.MissionType == true && mission.EndDate < DateTime.Now && mission.Status == true)
