--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/TimeSheet.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/TimeSheet.cshtml
@@ -16,5 +16,10 @@
 
 
 @section Scripts{
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+
     <partial name="_ValidationScriptsPartial" />
+    <script src="~/js/timesheet.js"></script>
+    
+
 }   
