--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/TimeSheet.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/TimeSheet.cshtml
@@ -10,7 +10,7 @@
 
 <div id ="hourModalPartial"</div>
 
-<partial name="_Footer" />
+<div class="timesheet-footer"><partial name="_Footer" /></div>
 
 
 
