--- a/MVC/CI-Platform/CIPlatformWeb/wwwroot/css/home.css
+++ b/MVC/CI-Platform/CIPlatformWeb/wwwroot/css/home.css
@@ -3,7 +3,16 @@
     .story-vol-img{
         width:50rem !important;
     }
+    .detail-img{
+        width:50% !important;
+    }
 
+}
+
+.timesheet-footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
 #restoreImg{
     height:1.2rem !important;
@@ -13,6 +22,7 @@
 }
 #sidebar {
     background: #F88634;
+    /*transition: 0.2s all linear;*/
 }
 
     #sidebar a {
@@ -603,7 +613,9 @@ img {
         width: 300px !important;
         position: fixed !important;
     }
-
+    .detail-img{
+        width:100% !important;
+    }
     .left-div {
         margin: 0;
     }
@@ -709,6 +721,10 @@ img {
        position:absolute;
         background-color:white;
         
+    }
+
+    .detail-img {
+        width: 100% !important;
     }
 
 
