--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/PlatformLandingPage.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/PlatformLandingPage.cshtml
@@ -68,32 +68,7 @@
 <!-- Pagination  -->
 
 <ul class="pagination mt-5 d-flex justify-content-center">
-    @*    <li class="page-item">
-        <a class="page-link" href="#" aria-label="Previous">
-        <span aria-hidden="true">&laquo;</span>
-        </a>
-        </li>*@
-    @*<li class="page-item">
-        <a class="page-link" href="#" aria-label="Next">
-        <img src="~/images/left.png" alt="">
-        </a>
-        </li>*@
-
-    @* <li class="page-item"><a class="page-link" id ="pageNumber" href="#"></a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item"><a class="page-link" href="#">4</a></li>
-        <li class="page-item"><a class="page-link" href="#">5</a></li>*@
-    @*<li class="page-item">
-        <a class="page-link" href="#" aria-label="Next">
-        <img src="~/images/right-arrow1.png" alt="">
-        </a>
-        </li>@**@
-    @*<li class="page-item">
-        <a class="page-link" href="#" aria-label="Next">
-        <span aria-hidden="true">&raquo;</span>
-        </a>
-        </li>*@
+   
 </ul>
 
 
@@ -115,19 +90,19 @@
            function sideBar(){
              
               
-            var list = document.getElementById("toggleDrop");
-            var dropDown = document.getElementById("showToggle");
+            //var list = document.getElementById("toggleDrop");
+            //var dropDown = document.getElementById("showToggle");
 
-            list.addEventListener("click", () => {
+            //list.addEventListener("click", () => {
                 
-                dropDown.classList.toggle("d-none")
-            });
+            //    dropDown.classList.toggle("d-none")
+            //});
 
-            var closeBtn = document.getElementById("closeSidebar");
-            closeBtn.addEventListener("click", () => {
+            //var closeBtn = document.getElementById("closeSidebar");
+            //closeBtn.addEventListener("click", () => {
 
-                dropDown.classList.add("d-none");
-            })
+            //    dropDown.classList.add("d-none");
+            //})
            }
 </script>
 
