--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_AddTimeMission.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_AddTimeMission.cshtml
@@ -81,13 +81,13 @@
             <div class="row row-cols-1 row-cols-md-2">
                 <div>
                     <label asp-for="StartDate"></label>
-                    <input type="date" class="form-control" asp-for="StartDate" placeholder="Select date">
+                    <input type="date" class="form-control" asp-for="StartDate" placeholder="Select date" id="startDate">
                     <span class="text-danger font-size" asp-validation-for="StartDate"></span>
-                    <span class="text-danger font-size" id="StartDateError"></span>
+                    <span class="text-danger font-size" id="startDateError"></span>
                 </div>
                 <div>
                     <label asp-for="EndDate"></label>
-                    <input type="date" class="form-control" asp-for="EndDate" placeholder="Select date">
+                    <input type="date" class="form-control" asp-for="EndDate" placeholder="Select date" id="endDate">
                     <span class="text-danger font-size" asp-validation-for="EndDate"></span>
                 </div>
             </div>
