--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_CMS.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_CMS.cshtml
@@ -8,7 +8,7 @@
 </div>
 <div class="d-flex justify-content-between">
     <div class="mt-3">
-            <input type="search" placeholder="Search" id="searchInput" class="form-control">
+            <input type="search" placeholder="Search" id="searchInput" class="form-control p-2">
     </div>
 
     <div class="mt-3">
