--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_MissionApplication.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_MissionApplication.cshtml
@@ -7,7 +7,7 @@
     </div>
     <div class="d-flex justify-content-between">
         <div class="mt-3">
-            <input type="search" placeholder="Search" class="form-control" id="searchInput">
+            <input type="search" placeholder="Search" class="form-control p-2" id="searchInput">
         </div>
 
     </div>
