--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_User.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_User.cshtml
@@ -7,7 +7,8 @@
     </div>
     <div class="d-flex justify-content-between">
         <div class="mt-3">
-            <input type="search" placeholder="Search" class="form-control" id="searchInput">
+           @* <img src="~/images/search.png" class="w-25 h-50 mt-2 ms-2 "/>*@
+            <input type="search" placeholder="Search" class="p-2  form-control" id="searchInput">
         </div>
 
         <div class="mt-3">
