--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/Privacy.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/Privacy.cshtml
@@ -1,6 +1,180 @@
-﻿@{
-    ViewData["Title"] = "Privacy Policy";
-}
-<h1>@ViewData["Title"]</h1>
+﻿<section class="border-top mt-3">
+    <div class="container">
+        <h3 class="mt-3 mt-lg-5">Privacy and Cookies Policy</h3>
+        <div class="row mt-lg-5 mt-4 gap-3">
+            <div class="col-12 col-lg-4">
+                <a href="#introduction"
+                   class="d-flex text-decoration-none text-black border-bottom justify-content-between py-3 intro-div">
+                    <div>Introduction</div>
+                    <div>></div>
+                </a>
+                <a href="#cookies"
+                   class="d-flex text-decoration-none text-black border-bottom justify-content-between py-3 cookie-div">
 
-<p>Use this page to detail your site's privacy policy.</p>
+                    <div>How does use cookies?</div>
+                    <div>></div>
+                </a>
+                <a href="#cookiePrefernces"
+                   class="d-flex text-decoration-none text-black  border-bottom justify-content-between py-3 preference-div">
+                    <div>How to manage your cookie preferences?</div>
+                    <div>></div>
+                </a>
+
+            </div>
+            <div class="col-12 col-lg-7">
+                <div class="border-bottom pb-3" id="introduction">
+                    <h4>Introduction</h4>
+                    <p class="text-secondary mt-3">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod
+                        tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                        cupidatat
+                        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut
+                        perspiciatis
+                        unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem
+                        aperiam,
+                        eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt
+                        explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed
+                        quia
+                        consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Lorem ipsum dolor sit
+                        amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+                        magna
+                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                        ex ea
+                        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
+                        dolore
+                        eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+                        officia deserunt mollit anim id est laborum.
+                    </p>
+
+                </div>
+                <div class="py-3 border-bottom" id="cookies">
+                    <h4>How does use cookies?</h4>
+                    <p class="text-secondary mt-3">
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                        accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore
+                        veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem
+                        quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
+                        ratione voluptatem sequi nesciunt.
+                    </p>
+                    <h5 class="mt-4">Why Optimy Uses These Technologies? </h5>
+                    <p class="text-secondary mt-3">We use these technologies for a number of purposes, such as:</p>
+                    <ul class="mt-3 text-secondary">
+                        <li>
+                            But I must explain to you how all this mistaken idea of denouncing pleasure and praising
+                            pain.
+                        </li>
+                        <li>
+                            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                            voluptatum deleniti atque excepturi sint occaecati cupiditate non provident, similique
+                            sunt in culpa qui officia deserunt mollitia animi.
+                        </li>
+                        <li>
+                            The other hand, we denounce with righteous indignation and dislike men who are so
+                            beguiled and demoralized
+                        </li>
+                        <li>
+                            But I must explain to you how all this mistaken idea of denouncing pleasure and praising
+                            pain.
+                        </li>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore
+                        </li>
+                    </ul>
+                    <p class="text-secondary mt-3">
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                        accusantium doloremque
+                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                        architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+                        aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                        voluptatem sequi nesciunt.
+                    </p>
+                </div>
+                <div class="py-3" id="cookiePrefernces">
+                    <h4>How to manage your cookie preferences?</h4>
+                    <p class="text-secondary my-3">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                    </p>
+                    <p class="text-secondary">
+                        Sed ut perspiciatis unde omnis iste natus error sit voluptatem
+                        accusantium doloremque
+                        laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
+                        architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
+                        aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione
+                        voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet,
+                        consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et
+                        dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum
+                        exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi
+                        consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil
+                        molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur.
+
+                    </p>
+                    <h5>Subtitle goes here</h5>
+                    <ol class="text-secondary mt-3">
+                        <li class="li-policy">
+                            But I must explain to you how all this mistaken idea of denouncing pleasure and praising
+                            pain.
+                            <ol class="policy-ol">
+                                <li>
+                                    On the other hand, we denounce with righteous indignation and dislike men who
+                                    are so beguiled.
+                                </li>
+                                <li>
+                                    On the other hand, we denounce with righteous indignation and dislike men who
+                                    are so beguiled.
+                                </li>
+                            </ol>
+                        </li>
+                        <li>
+                            At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium
+                            voluptatum deleniti atque excepturi sint occaecati cupiditate non provident, similique
+                            sunt in culpa qui officia deserunt mollitia animi
+                        </li>
+                        <li>
+                            On the other hand, we denounce with righteous indignation and dislike men who are so
+                            beguiled and demoralized
+                        </li>
+                        <li>
+                            But I must explain to you how all this mistaken idea of denouncing pleasure and praising
+                            pain.
+                        </li>
+                        <li>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                            incididunt ut labore et dolore
+                        </li>
+                    </ol>
+
+                    <div class="my-5 d-flex flex-column gap-3">
+                        <h1>The first level heading - H1</h1>
+                        <h2>The second level heading - H2 </h2>
+                        <h3>The third level heading - H3</h3>
+                        <h4>The forth level heading - H4</h4>
+                        <h5> The third level heading - H5</h5>
+                        <h6> The third level heading - H6</h6>
+                    </div>
+
+                    <p class="mt-3 text-secondary">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod tempor
+                        incididunt ut
+                        labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
+                        voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+                        cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                    </p>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+</section>
