--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/Registration.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/Registration.cshtml
@@ -48,7 +48,7 @@
         </form>
 
         <div class="d-flex flex-column mt-2 align-items-center bottom-div ">
-            <a asp-action="ForgotPassword" asp-controller="Home">
+            <a asp-action="ForgotPassword" asp-controller="Home" class="text-decoration-none">
                 <span class="login-span text-light-custom">
                     Lost
                     your
@@ -57,15 +57,15 @@
             </a>
 
             <span class="mt-3 login-span text-light-custom">
-                Already registerd? <a asp-action="Login" asp-controller="Home">
+                Already registerd? <a asp-action="Login" asp-controller="Home" class="text-decoration-none">
                     Login
                     now
                 </a>
             </span>
-            <span class="login-span text-light-custom privacy-text position-lg-fixed">
+            <a class="login-span text-light-custom privacy-text position-lg-fixed text-decoration-none text-black"  asp-action = "Privacy" asp-controller = "Home" target="_blank">
                 Priavcy
                 Policy
-            </span>
+            </a>
         </div>
     </div>
 
