--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/ResetPassword.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/ResetPassword.cshtml
@@ -36,11 +36,11 @@
         </form>
 
         <div class="d-flex flex-column align-items-center bottom-div ">
-            <a class="text-center p-2" asp-action="Login" asp-controller="Home">Login</a>
-            <span class="login-span text-light-custom privacy-text position-lg-fixed">
+            <a class="text-center p-2 text-decoration-none" asp-action="Login" asp-controller="Home">Login</a>
+            <a class="login-span text-light-custom privacy-text position-lg-fixed text-decoration-none text-black"  asp-action = "Privacy" asp-controller = "Home" target="_blank">
                 Priavcy
                 Policy
-            </span>
+            </a>
         </div>
     </div>
 
