--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_CMS.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_CMS.cshtml
@@ -26,9 +26,9 @@
     <table class="table">
         <thead>
             <tr class="cms-table">
-                <th>Title</th>
-                <th>Status</th>
-                <th>Action</th>
+                <th class="col-7">Title</th>
+                <th class="col-3">Status</th>
+                <th class="col-1">Action</th>
 
 
 
