--- a/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar.cshtml
@@ -39,6 +39,18 @@
         <ul class="dropdown-menu cms-dropdown" aria-labelledby="dropdownMenuButton1">
            
         </ul>
+            <button class="dropdown-toggle policy-btn d-none d-md-inline d-lg-inline" data-bs-toggle="dropdown"
+            aria-expanded="false" type="button" id="dropdownMenuButton2">Explore
+            <img class="m-1" src="images/drop-down.png" alt="#">
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
+          
+            <li><a class="dropdown-item" href="#">Top Themes</a></li>
+                <li><a class="dropdown-item" href="#">Most Ranked</a></li>
+                <li><a class="dropdown-item" href="#">Top Favourite</a></li>
+                <li><a class="dropdown-item" href="#">Random</a></li>
+            </ul>
+        
 
     </div>
 
