--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_Mission.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_Mission.cshtml
@@ -39,7 +39,7 @@
                             <th>Start Date</th>
                             <th>End Date</th>
                             <th>Status</th>
-                            <th>Action</th>
+                            <th class= "col-1">Action</th>
 
 
 
