--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/TimeSheet.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/TimeSheet.cshtml
@@ -2,7 +2,7 @@
 @{
     var userId = Context.Session.GetString("userId");
 }
-<partial name = "_Navbar1" />
+<partial name = "_Navbar" />
 
 <div id="volTimeSheetPartial"><partial name="_VolTimeSheet" /></div>
 
