--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/UserEditProfile.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/UserEditProfile.cshtml
@@ -2,7 +2,7 @@
 @{
     var userId = Context.Session.GetString("userId");
 }
-<partial name ="_Navbar1" />
+<partial name ="_Navbar" />
 
 <input type ="hidden" value="@userId" id="userId" />
 <section class="border-top">
