--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/ShareStory.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/ShareStory.cshtml
@@ -5,7 +5,7 @@
     var userName = Context.Session.GetString("userName");
 
 }
-<partial name="_Navbar1" />
+<partial name="_Navbar" />
 
 <section class="border-top">
     
