--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/StoryDetail.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/StoryDetail.cshtml
@@ -3,7 +3,7 @@
     var userId = Context.Session.GetString("userId");
 }
 <!-- navbar  -->
-<partial name="_Navbar1" />
+<partial name="_Navbar" />
 <input type = "hidden" value ="@Model.StoryId" id="storyId" />
 <input type="hidden" value="@Model.MissionId" id="missionId" />
 <section class="border-top mt-3">
