--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/StoryListing.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Story/StoryListing.cshtml
@@ -8,7 +8,7 @@
 
 <!-- navbar  -->
 <div class="d-grid min-vh-100 grid-index">
-    <partial name="_Navbar1" />
+    <partial name="_Navbar" />
     <!-- image div  -->
     <section>
 
