--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_Mission.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Admin/Views/Dashboard/_Mission.cshtml
@@ -7,7 +7,7 @@
                 <div class="mt-3">
                     <input type="search" placeholder="Search" id="searchInput" class="form-control p-2">
                 </div>
-
+                <div class="d-flex gap-3">
                 <div class="mt-3">
                     <a class="btn border rounded-pill px-sm-3 py-sm-2 px-1 orange-btn" id="addTimeBtn"
                         style="border-color: #F88634 !important" 
@@ -28,6 +28,7 @@
                           d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                 </svg> Add Goal Mission
             </a>
+        </div>
         </div>
             </div>
             <div class="table-responsive mt-3">
