--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/Cms.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/Cms.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "CMS Page";
 }
 <div class="grid-index d-grid min-vh-100">
-    <partial name="_Navbar1"></partial>
+    <partial name="_Navbar"></partial>
     <section class="container py-4">
         <div class="border-bottom border-2 mb-3">
             <h4 class="border-bottom border-dark width-max-conatent m-0 pb-3 pe-2">@Model.Title</h4>
