--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/PolicyPage.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/PolicyPage.cshtml
@@ -3,7 +3,7 @@
     
 }
 
-<partial name ="_Navbar1" />
+<partial name ="_Navbar" />
 <section class="border-top mt-3">
     <div class="container">
         <h3 class="mt-3 mt-lg-5">Privacy and Cookies Policy</h3>
