--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/MissionDetail/Index.cshtml
@@ -68,7 +68,7 @@
 </nav>
 *@
 
-<partial name = "_Navbar1" />
+<partial name = "_Navbar" />
 
 <section class="container mt-3 border-top p-5">
     <div class="d-flex flex-column flex-sm-column flex-lg-row justify-content-around">
