--- a/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar.cshtml
@@ -1,4 +1,4 @@
-﻿@model CIPlatform.entities.ViewModels.IndexViewModel;
+﻿
 @{
     var UserName = Context.Session.GetString("firstName");
     var userId = Context.Session.GetString("userId");
@@ -20,6 +20,17 @@
     </button>
     <ul class="dropdown-menu cms-dropdown" aria-labelledby="dropdownMenuButton1">
     </ul>
+@*
+    <button class="dropdown-toggle policy-btn mt-3 " data-bs-toggle="dropdown"
+            aria-expanded="false" type="button" id="dropdownMenuButton2">Explore
+            <img class="m-1" src="~/images/drop-down.png" alt="#">
+        </button>
+     <ul class="dropdown-menu" id="exploreDropdown">
+                        <li class="dropdown-item" data-id="7">Top Themes</li>
+                        <li class="dropdown-item" data-id="8">Most Ranked</li>
+                        <li class="dropdown-item" data-id="9">Top Favourites</li>
+                        <li class="dropdown-item" data-id="10">Random</li>
+                    </ul>*@
     </div>
 </div>
 
@@ -30,7 +41,20 @@
         </button>
         <a asp-action="PlatformLandingPage" asp-controller="Home"><img class="logo h-50" src="~/images/logo.png" alt="#"></a>
 
-        <a asp-action="StoryListing" asp-controller="Story" class="text-decoration-none mx-5 d-none d-md-inline d-lg-inline">Stories</a>
+        <div class="mt-3 ms-3 d-inline d-none" id="exploreDiv">
+         <button class="dropdown-toggle policy-btn  " data-bs-toggle="dropdown"
+            aria-expanded="false" type="button" id="dropdownMenuButton2">Explore
+            <img class="m-1" src="~/images/drop-down.png" alt="#">
+        </button>
+     <ul class="dropdown-menu" id="exploreDropdown">
+                        <li class="dropdown-item" data-id="7">Top Themes</li>
+                        <li class="dropdown-item" data-id="8">Most Ranked</li>
+                        <li class="dropdown-item" data-id="9">Top Favourites</li>
+                        <li class="dropdown-item" data-id="10">Random</li>
+                    </ul>
+                   </div>
+
+        <a asp-action="StoryListing" asp-controller="Story" class="text-decoration-none ms-3 me-5 d-none d-md-inline d-lg-inline">Stories</a>
         <button class="dropdown-toggle policy-btn d-none d-md-inline d-lg-inline" data-bs-toggle="dropdown"
                 aria-expanded="false" type="button" id="dropdownMenuButton1">
             Policy
@@ -39,17 +63,7 @@
         <ul class="dropdown-menu cms-dropdown" aria-labelledby="dropdownMenuButton1">
            
         </ul>
-            <button class="dropdown-toggle policy-btn d-none d-md-inline d-lg-inline" data-bs-toggle="dropdown"
-            aria-expanded="false" type="button" id="dropdownMenuButton2">Explore
-            <img class="m-1" src="images/drop-down.png" alt="#">
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton2">
-          
-            <li><a class="dropdown-item" href="#">Top Themes</a></li>
-                <li><a class="dropdown-item" href="#">Most Ranked</a></li>
-                <li><a class="dropdown-item" href="#">Top Favourite</a></li>
-                <li><a class="dropdown-item" href="#">Random</a></li>
-            </ul>
+         
         
 
     </div>
@@ -90,68 +104,5 @@
 
 </div>
 
-<!-- second section -->
-<section class="d-flex second-div mt-4">
-    <div class="container">
-        <div class="d-flex row p-0">
-            <div class="col-10 col-md-11 col-lg-6">
-                <div class="p-3 search-div d-flex gap-3">
-                    <img class="search-img mt-1" src="~/images/search.png"
-                         alt="#">
-                    <input type="text" id="search-bar" class="search-bar form-control border-0 p-0"
-                           placeholder="Search mission...">
-                </div>
-            </div>
-            <!-- filter button -->
-            <button class="col d-lg-none filter-btn border-0">
-                <img src="~/images/filter.png" alt="#">
-            </button>
-            <!-- filter menu -->
-            <div class="col-6 m-0  filter-div" >
-                <div class="row d-lg-flex " id="filter-menu">
-                    <div class="col-lg-3 p-3">
-                        <select id="country-filter" class="form-select select-group">
-                            <option value="1" selected disabled>Country</option>
-                             @foreach(var country in Model.CountryList)
-                            {
-                                <option value="@country.CountryId">@country.Name</option>
-                               
-                            }
 
-
-                        </select>
-                    </div>
-                    <div class="col-lg-3 p-3 city-div">
-                        <select id="city-filter" class="form-select select-group" >
-                           
-                            <option value="1" selected disabled>City</option>
-                           @foreach (var cities in Model.CityList)
-                            {
-                             @*<option value="CityName">@cities.Name</option>*@
-                            }
-                        </select>
-                    </div>
-                    <div class=" col-lg-3 p-3">
-                        <select id="theme-filter" class="form-select select-group" >
-                            <option value="1" selected disabled>Theme</option>
-                            @foreach (var themes in Model.ThemeList)
-                            {
-                                <option value="@themes.MissionThemeId">@themes.Title</option>
-                            }
-                        </select>
-                    </div>
-                    <div class="col-lg-3 p-3">
-                        <select class="form-select select-group" id="skill-filter">
-                            <option value="1" selected disabled>Skills</option>
-                            @foreach (var skills in Model.SkillsList)
-                            {
-                                <option value="@skills.SkillId">@skills.SkillName</option>
-                            }
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
-</section>
 
