--- a/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Index.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Areas/Users/Views/Home/_Index.cshtml
@@ -48,9 +48,10 @@
                             </a>
 
                         }
-                    <a href="#" class="position-absolute user-div rounded-pill p-2">
+
+                    @*<a href="#" class="position-absolute user-div rounded-pill p-2">
                         <img class="" src="~/images/user.png" alt="#">
-                    </a>
+                    </a>*@
                     }
 
                     <span class="theme-name align-text-top py-2 px-4 mx-auto position-relative translate-middle-y">@missions.Theme.Title</span>
@@ -217,9 +218,9 @@
                                     <img class="" src="~/images/heart.png" alt="#">
                                 </a>
                             }
-                            <a href="#" class="position-absolute user-list-div rounded-pill p-2">
+                           @* <a href="#" class="position-absolute user-list-div rounded-pill p-2">
                                 <img class="" src="~/images/user.png" alt="#">
-                            </a>
+                            </a>*@
                         }
                         
                         <div class="theme-name align-text-top py-2 px-4 mx-auto translate-middle-y">
