--- a/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar.cshtml
+++ b/MVC/CI-Platform/CIPlatformWeb/Views/Shared/_Navbar.cshtml
@@ -20,7 +20,7 @@
     </button>
     <ul class="dropdown-menu cms-dropdown" aria-labelledby="dropdownMenuButton1">
     </ul>
-@*
+
     <button class="dropdown-toggle policy-btn mt-3 " data-bs-toggle="dropdown"
             aria-expanded="false" type="button" id="dropdownMenuButton2">Explore
             <img class="m-1" src="~/images/drop-down.png" alt="#">
@@ -30,7 +30,7 @@
                         <li class="dropdown-item" data-id="8">Most Ranked</li>
                         <li class="dropdown-item" data-id="9">Top Favourites</li>
                         <li class="dropdown-item" data-id="10">Random</li>
-                    </ul>*@
+                    </ul>
     </div>
 </div>
 
@@ -41,7 +41,7 @@
         </button>
         <a asp-action="PlatformLandingPage" asp-controller="Home"><img class="logo h-50" src="~/images/logo.png" alt="#"></a>
 
-        <div class="mt-3 ms-3 d-inline d-none" id="exploreDiv">
+        <div class="d-md-inline mt-3 ms-3" id="exploreDiv">
          <button class="dropdown-toggle policy-btn  " data-bs-toggle="dropdown"
             aria-expanded="false" type="button" id="dropdownMenuButton2">Explore
             <img class="m-1" src="~/images/drop-down.png" alt="#">
@@ -74,6 +74,8 @@
         
         @if (UserName != null)
         {
+            
+            <img src= "~/images/bell.png" class="notification-bell me-2" />
             <img class="rounded-circle user-img" src="@ava" alt="#">
             <button class="dropdown-toggle policy-btn profile-btn " data-bs-toggle="dropdown"
                 aria-expanded="false" type="button" id="dropdownMenuButton1">
@@ -83,6 +85,7 @@
 
                 <img class="m-1" src="~/images/drop-down.png" alt="#">
             </button>
+
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
               
                 <li><a class="dropdown-item" asp-action="UserEditProfile" asp-controller="Home" asp-route-id="@userId">My Profile</a></li>
@@ -97,7 +100,7 @@
         @if (UserName == null)
         {
             <div class="d-inline">
-                <a class="btn btn-outline-danger rounded" asp-action="Login" asp-controller="Home" >Login</a>
+                <a class="btn btn-outline-danger rounded" asp-action="Login" asp-controller="Home">Login</a>
             </div>
         }
     </div>
