--- a/MVC/CI-Platform/CIPlatformWeb/wwwroot/css/home.css
+++ b/MVC/CI-Platform/CIPlatformWeb/wwwroot/css/home.css
@@ -735,7 +735,9 @@ img {
         width: 100% !important;
     }
 
-
+    #exploreDiv{
+        display: none;
+    }
 
     .second-div {
         border-top: 1px solid rgba(0, 0, 0, 0.1);
